# forth-vm-sim

./: .gitignore  CMakeLists.txt  README.md  build_eforth.py  design_decisions.html  eforth_core.fvs  fbuilder.html  forth.html  genindex.html  index.html  objects.inv  pytest.ini  requirements.txt  search.html  searchindex.js  system_overview.html  virtual_machine.html
.github/workflows/: default.yml
_sources/: design_decisions.rst.txt  fbuilder.rst.txt  index.rst.txt  virtual_machine.rst.txt
_sources/adr/: adr02.rst.txt
adr/: adr01.html  adr02.html  adr03.html
cmake/: csv-parser.cmake  imgui.cmake
doc/: conf.py  design_decisions.md  design_decisions.rst  fbuilder.rst  forth.rst  index.rst  system_overview.rst  virtual_machine.rst
doc/_ext/: adr.py
doc/_static/: theme_overrides.css
doc/adr/: adr01.rst  adr03.rst
doc/images/: encoding_3r.json  encoding_ri5.json  encoding_rop.json  encoding_rr.json
eforth/: eforth_basics.fvs  eforth_core.fvs  eforth_system.fvs  test_word.fvs  test_words.py  vm_core.fvs
fbuilder/: __main__.py  app.py  assembler.py  debug_symbols.py  emitter.py  grammar.lark  operands.py  test_assembler.py  test_parser.py
patch/: ImGuiFileDialogConfig.h
src/: intervaltree.h  main.cpp  main_gui.cpp  symbols.cpp  symbols.h  tools.cpp  tools.h  vm.cpp  vm.h  vm_memory.cpp  vm_memory.h
test/: test_tools.cpp  test_vm.cpp
vmforth/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vmforth/syntaxes/: fvs.tmLanguage.json
